--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,14 +1,25 @@
 <!--  This file is app/views/movies/index.html.erb -->
 <h2>All Movies</h2>
 
+
+<%= form_tag movies_path,:id => "ratings_form", :method => :get do %>
+  Include:
+  <% @all_ratings.each do |rating| %>
+    <%= rating %>
+    <%= check_box_tag "ratings[#{rating}]", 1, @selected_ratings.include?(rating), :id => "ratings_#{rating}"%>
+  <% end %>
+  <%= submit_tag 'Refresh', :id => "ratings_submit", :class => 'btn btn-primary' %>
+<% end %>
+
+
 <%#  Part 1: Start here... %>
 
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <th><%= link_to "Movie Title", {:sort => "title"} , id: 'title_header', class: @title_header %> </th>
+      <th class="<%= ('hilite' if @sort == 'title') %>"><%= link_to "Movie Title", {:sort => "title"} , id: 'title_header' %> </th>
       <th>Rating</th>
-      <th><%= link_to "Release Date", {:sort => "release_date"}, id: 'release_date_header', class: @release_header %> </th>
+      <th class="<%= ('hilite' if @sort == 'release_date') %>"><%= link_to "Release Date", {:sort => "release_date"}, id: 'release_date_header' %> </th>
       <th>More Info</th>
     </tr>
   </thead>
